lib/tools/orbit/test_output/lazy_ograph_fixed.output
Flow compiler (3rd generation)

Processing 'orbit' on http server

tests/lazy_ograph_fixed.orb: tests/lazy_ograph_fixed.orb:95:7: Parse error
  let sourceExpr = extractOGraphNode(graph, sourceNodeId),
      ^
